# mechreward

./: .gitignore  CONTRIBUTING.md  README.md  README.md.  RESEARCH.md  dataset_readme_stage_b.md  paper_1_draft.md  pyproject.toml
.github/workflows/: ci.yml
arxiv_submission/: SUBMISSION_INSTRUCTIONS.md  main.tex  qwen36_microcircuits_draft.md  references.bib
arxiv_submission/figures/: generate_figures.py
benchmarks/: eval_suite.py  reward_hacking_bench.py
blog/: alignment_forum_g3_phase_a.md
catalogs/gemma-2-9b/: confidence_pack.json  reasoning_pack.json  retrieval_pack.json
catalogs/gemma-4-e4b/: reasoning_pack.json
catalogs/qwen3.5-4b/: reasoning_pack.json
catalogs/qwen3.6-35b-a3b/: reasoning_pack.json
experiments/: 01_baseline_outcome_only.py  02_mechreward_only.py  03_hybrid_outcome_plus_mech.py  04_sarm_reproduction.py  05_crl_reproduction.py  06_adversarial_hacking_suite.py  07_capability_preservation.py
notebooks/: circuit_tracer_test_topk_res_sae.ipynb  hyperqwen_portfolio_qwen36.ipynb  mcr_b_analysis_compute_saturation.ipynb  mcr_b_data_collection_qwen36.ipynb  mcr_d_density_gmm.ipynb  mcr_g_grpo_sanity_qwen36.ipynb  mixtral_8x7b_stage_b_analog.ipynb  qwen25_32b_stage_b_analog.ipynb  qwen25_7b_stage_b_analog.ipynb  qwen35_cluster_labeling_phase3.ipynb  qwen35_dense_amnesic_crossarch.ipynb  qwen35_phase4a_preprocess.ipynb  qwen35_phase4b_alt_diffmeans.ipynb  qwen35_phase4b_steering_training.ipynb  qwen35_phase5_hybrid_eval.ipynb  qwen35_sae_phase2.ipynb  qwen35_thinking_traces_phase1.ipynb  qwen36_27b_compactds_rag.ipynb  qwen36_27b_pwmv.ipynb  qwen36_27b_sae_multilayer.ipynb  qwen36_27b_sae_papergrade.ipynb  qwen36_27b_scale_validation_n100.ipynb  qwen36_27b_selfconsistency_validation.ipynb  qwen36_27b_steering_validation_n50.ipynb  qwen36_35b_pwmv_validation.ipynb  qwen36_amnesic_inference.ipynb  qwen36_amnesic_sweep.ipynb  qwen36_causal_boundaries.ipynb  qwen36_contrastive_lora_amnesic.ipynb  qwen36_crest_phase1_probes.ipynb  qwen36_crest_phase1b_response_capture.ipynb  qwen36_deepconf_probe_wrapper.ipynb  qwen36_entropy_gated_amnesic.ipynb  qwen36_expert_profiling.ipynb  qwen36_feature_circuits_phase_a.ipynb  qwen36_feature_circuits_phase_b_moe.ipynb  qwen36_feature_circuits_phase_c_ate.ipynb  qwen36_feature_circuits_phase_d_gdn.ipynb  qwen36_forward_planning_detection.ipynb  qwen36_hyperqwen_end_to_end.ipynb  (+18 more)
scripts/: train_sae_qwen35.py
src/mechreward/: __init__.py  (+2 more)
tests/: test_adversarial.py  test_aggregation.py  test_catalog.py  test_composition.py  test_probes.py  test_reasonscore.py  test_scheduler.py  test_verifiers.py
(+33 files in other folders)
